# myTinyWebserver

./: CMakeLists.txt  README.md
inc/: byteorder5_1.h  include_set.h  judgeEndian.h  mySocket.h
resource/: test_cannot_read  test_res
src/: Main.cpp  byteorder5_1.cpp  judgeEndian.cpp
src/chapter5/: README.md  README_ABOUT_CHAPTER5.md  byteorder5_1.cpp  get_daytime_service5_12.cpp  oobrecv5_7.cpp  oobsend5_6.cpp  set_recv_buffer5_11.cpp  set_send_buffer5_10.cpp  so_reuseaddr5_9.cpp  testaccept5_5.cpp  testlisten5_3.cpp  try_get_peername.cpp  try_get_socket.cpp
src/chapter6/: dup_func6_1.cpp  getSocket.cpp  sendfile_transmit6_3.cpp  splice6_4.cpp  tee6_5.cpp  writev_in_webserver6_2.cpp
src/chapter7/: README.md  daemonize7_3.cpp  myTestRESUID.cpp  switch_user7_2.cpp  uid_euid_diff7_1.cpp
src/chapter8/: README.md  parse_http8_3.cpp
src/chapter9/: LE_and_ET9_3.cpp  README.md  epoll_oneshot_event9_4.cpp  poll_and_epoll9_2.cpp  use_select9_1.cpp
